--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-﻿*.py linguist-language=python
+*.js linguist-language=Python
+*.css linguist-language=Python
+*.html linguist-language=Python
+*.py linguist-language=Python
